syntax = "proto3";

option go_package = "./pb";

package pb;


//model
message Homestay {
  int64   id = 1;
  string  title = 2;
  float   ratingStars = 3;
  int64 commentCount = 4;
  string titleTags = 5;
  string  bannerUrls = 6;
  double longitude = 7;
  double latitude = 8;
  double distance = 9;
  int32 typeId = 10;
  string location = 11;
  string facilities = 12;
  string cover = 13;
  string area = 14;
  string roomConfig = 15;
  string cleanVideo = 16;
  int64   homestayBusinessId = 17;   //店铺id
  int64   hostId = 18;               //房东id
  string hostAvatar = 19;
  string hostNickname = 20;
  int64   rowState = 21;             //0:下架 1:上架
  int64   priceBefore = 22;       //民宿价格(分)
  int64   priceAfter = 23;
}

message HomestayComment {
  int64 id = 1;
  int64 homestayId = 2;
  string commentTime = 3;
  string content = 4;
  string star = 5;
  string tidyRating = 6;
  string trafficRating = 7;
  string securityRating = 8;
  string foodRating = 9;
  string costRating = 10;
  int64 userId = 11;
  string nickname = 12;
  string avatar = 13;
  string imageUrls = 14;
  int64 likeCount = 15;
}

//req 、resp
message HomestayDetailReq {
  int64 homestayId = 1;
  int64 userId = 2;
}
message HomestayDetailResp {
  int64 id = 1;
  string title = 2;
  double ratingStars = 3;
  int64 commentCount = 4;
  string titleTags = 5;
  string bannerUrls = 6;
  double longitude = 7;
  double latitude = 8;
  string location = 9;
  string facilities = 10;
  string area = 11;
  string roomConfig = 12;
  string cleanVideo = 13;
  string hostAvatar = 14;             // 房东头像
  string hostNickname = 15;             // 房东昵称
  int64 priceBefore = 16;                //民宿价格
  int64 priceAfter = 17;
  int64 hostId = 18;
  int64 homestayBusinessId = 19;
  bool isCollected = 20;
}

message AddHomestayReq {
  string title = 1;
  string titleTags = 2;
  string bannerUrls = 3;
  double longitude = 4;
  double latitude = 5;
  string location = 6;
  string facilities = 7;
  string area = 8;
  string roomConfig = 9;
  string cleanVideo = 10;
  int64 priceBefore = 11;              //民宿价格
  int64 priceAfter = 12;
  int64 hostId = 13;
  string hostAvatar = 14;
  string hostNickname = 15;
}
message AddHomestayResp {
}

message UpdateHomestayReq {
  int64 homestayId = 1;
  string title = 2;
  string titleTags = 3;
  string bannerUrls = 4;
  double longitude = 5;
  double latitude = 6;
  string location = 7;
  string facilities = 8;
  string area = 9;
  string roomConfig = 10;
  string cleanVideo = 11;
  int64 priceBefore = 12;              //民宿价格
  int64 priceAfter = 13;
  int64 hostId = 14;
  string hostAvatar = 15;
  string hostNickname = 16;
  int64 rowState = 17;
}
message UpdateHomestayResp {
}

message DeleteHomestayReq {
  int64 userId = 1;
  int64 homestayId = 2;
}
message DeleteHomestayResp {
  bool success = 1;
}

message AdminDeleteHomestayReq {
  int64 homestayId = 1;
}
message AdminDeleteHomestayResp {
  bool success = 1;
}

message WishListReq {
  int64 userId = 1;
  int64 page = 2;
  int64 pageSize = 3;
}
message WishListResp {
  repeated Homestay list = 1;
}

message AddWishListReq {
  int64 userId = 1;
  int64 homestayId = 2;
}
message AddWishListResp {
  bool success = 1;
}

message RemoveWishListReq {
  int64 userId = 1;
  int64 homestayId = 2;
}
message RemoveWishListResp {
  bool success = 1;
}

message AddGuessReq {
  int64 homestayId = 1;
}
message AddGuessResp {
  bool success = 1;
}

message History {
  int64   id = 1;
  int64   homestayId = 2;
  string  title = 3;
  string  cover = 4;
  string  intro = 5;
  string  location = 6;
  int64   homestayBusinessId = 7;   //店铺id
  int64   userId = 8;               //房东id
  int64   rowState = 9;             //0:下架 1:上架
  double  ratingStars = 10;
  int64   priceBefore = 11;       //民宿价格(分)
  int64   priceAfter = 12;
  int64   lastBrowsingTime = 13;
}

message HistoryListReq {
  int64 userId = 1;
  int64 page = 2;
  int64 pageSize = 3;
}
message HistoryListResp {
  repeated History historyList = 1;
}

message RemoveHistoryReq {
  int64 userId = 1;
  int64 historyId = 2;
}
message RemoveHistoryResp {
  bool success = 1;
}

message ClearHistoryReq {
  int64 userId = 1;
}
message ClearHistoryResp {
  bool success = 1;
}

message SearchHistoryReq {
  int64 userId = 1;
  int64 homestayId = 2;
}
message SearchHistoryResp {
  History history = 1;
}

message AddCommentReq {
  HomestayComment homestayComment = 1;
}
message AddCommentResp {
  bool success = 1;
}

message LikeCommentReq {
  int64 commentId = 1;
}
message LikeCommentResp {
  bool success = 1;
}

message SearchByLocationReq {
  string location = 1;
}
message SearchByLocationResp {
  repeated Homestay list = 1;
}

message QueryShopByTypeRequest {
  int32 typeId = 1;
  int32 current = 2;
  double x = 3;
  double y = 4;
}

message QueryShopByTypeResponse {
  int32 code = 1;
  string msg = 2;
  repeated Homestay data = 3;
}


message SeckillVoucherRequest {
  int64 voucherId = 1;
  int64 userId = 2;
}

message SeckillVoucherResponse {
  int64 code = 1;
  string message = 2;
  int64 orderId = 3;
}


message SeckillVoucher {
  int64 id = 1;
  int64 stock = 2;
}

message VoucherOrder {
  int64 id = 1;
  int64 userId = 2;
  int64 voucherId = 3;
}

//service
service travel {
  //homestayDetail
  rpc homestayDetail(HomestayDetailReq) returns(HomestayDetailResp);
  rpc homestayDetailWithoutLogin(HomestayDetailReq) returns (HomestayDetailResp);
  rpc addHomestay(AddHomestayReq) returns (AddHomestayResp);
  rpc updateHomestay(UpdateHomestayReq) returns (UpdateHomestayResp);
  rpc deleteHomestay(DeleteHomestayReq) returns (DeleteHomestayResp);
  rpc adminDeleteHomestay(AdminDeleteHomestayReq) returns (AdminDeleteHomestayResp);
  rpc addComment(AddCommentReq) returns (AddCommentResp);
  rpc likeComment(LikeCommentReq) returns (LikeCommentResp);
  rpc wishList(WishListReq) returns (WishListResp);
  rpc addWishList(AddWishListReq) returns (AddWishListResp);
  rpc removeWishList(RemoveWishListReq) returns (RemoveWishListResp);
  rpc addGuess(AddGuessReq) returns (AddGuessResp);
  rpc historyList(HistoryListReq) returns (HistoryListResp);
  rpc removeHistory(RemoveHistoryReq) returns (RemoveHistoryResp);
  rpc clearHistory(ClearHistoryReq) returns (ClearHistoryResp);
  rpc searchHistory(SearchHistoryReq) returns (SearchHistoryResp);
  rpc searchByLocation(SearchByLocationReq) returns (SearchByLocationResp);
  rpc queryShopByType(QueryShopByTypeRequest) returns (QueryShopByTypeResponse);
  rpc seckillVoucher(SeckillVoucherRequest) returns (SeckillVoucherResponse);

  // 查询热门博客
  rpc QueryHotBlog(QueryHotBlogRequest) returns (QueryHotBlogResponse);
  // 根据ID查询博客
  rpc QueryBlogById(QueryBlogByIdRequest) returns (QueryBlogByIdResponse);
  // 点赞或取消点赞
  rpc LikeBlog(LikeBlogRequest) returns (LikeBlogResponse);
  // 查询某篇博客的点赞用户
  rpc QueryBlogLikes(QueryBlogLikesRequest) returns (QueryBlogLikesResponse);
  // 保存博客
  rpc SaveBlog(SaveBlogRequest) returns (SaveBlogResponse);
  // 查询关注的博客
  rpc QueryBlogOfFollow(QueryBlogOfFollowRequest) returns (QueryBlogOfFollowResponse);

  rpc UpdateShop(UpdateShopRequest) returns (UpdateShopResponse);
}

// Blog消息，表示一篇博客
message Blog {
  int64 id = 1;
  int64 user_id = 2;
  string name = 3;
  string icon = 4;
  int64 liked = 5;
  bool is_like = 6;
  // 添加其他字段，根据实际需求
}

// UserDTO消息，表示用户数据传输对象
message UserDTO {
  int64 id = 1;
  string nick_name = 2;
  string icon = 3;
  // 添加其他字段，根据实际需求
}

// ScrollResult消息，表示滚动分页的结果
message ScrollResult {
  repeated Blog list = 1;
  int32 offset = 2;
  int64 min_time = 3;
}

// QueryHotBlogRequest请求消息
message QueryHotBlogRequest {
  int32 current = 1;
  int64 userId = 2;
}

// QueryHotBlogResponse响应消息
message QueryHotBlogResponse {
  int32 code = 1;
  repeated Blog data = 2;
  string message = 3;
}

// QueryBlogByIdRequest请求消息
message QueryBlogByIdRequest {
  int64 id = 1;
  int64 userId = 2;
}

// QueryBlogByIdResponse响应消息
message QueryBlogByIdResponse {
  int32 code = 1;
  Blog data = 2;
  string message = 3;
}

// LikeBlogRequest请求消息
message LikeBlogRequest {
  int64 id = 1;
  int64 userId = 2;
}

// LikeBlogResponse响应消息
message LikeBlogResponse {
  int32 code = 1;
  string message = 2;
}

// QueryBlogLikesRequest请求消息
message QueryBlogLikesRequest {
  int64 id = 1;
}

// QueryBlogLikesResponse响应消息
message QueryBlogLikesResponse {
  int32 code = 1;
  repeated UserDTO data = 2;
  string message = 3;
}

// SaveBlogRequest请求消息
message SaveBlogRequest {
  int64 user_id = 1;
  string content = 2;
  // 根据实际需求添加其他字段，例如标题、标签等
}

// SaveBlogResponse响应消息
message SaveBlogResponse {
  int32 code = 1;
  int64 data = 2; // 返回博客ID
  string message = 3;
}

// QueryBlogOfFollowRequest请求消息
message QueryBlogOfFollowRequest {
  int64 max = 1;
  int32 offset = 2;
  int64 userId = 3;
}

// QueryBlogOfFollowResponse响应消息
message QueryBlogOfFollowResponse {
  int32 code = 1;
  ScrollResult data = 2;
  string message = 3;
}

//// Follow 消息，表示一个关注关系
//message Follow {
//  int64 user_id = 1;
//  int64 follow_user_id = 2;
//}
//
//// QueryFollowsByFollowUserID 请求消息
//message QueryFollowsByFollowUserIDRequest {
//  int64 follow_user_id = 1; // 被关注的用户ID
//}
//
//// QueryFollowsByFollowUserID 响应消息
//message QueryFollowsByFollowUserIDResponse {
//  int32 code = 1;               // 状态码，例如 200 表示成功
//  repeated Follow data = 2;     // 关注者列表
//  string message = 3;           // 相关消息
//}

message UpdateShopRequest {
  Homestay homestay = 1;
}

message UpdateShopResponse {
  int32 code = 1;
  string message = 2;
}